<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivContactItem"
        android:layout_width="@dimen/width_image_contact"
        android:layout_height="@dimen/height_image_contact"
        android:layout_margin="@dimen/regular_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/tvFirstNameItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/regular_margin"
        android:text="@string/firstnamecontact_default"
        app:layout_constraintStart_toEndOf="@id/ivContactItem"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLastNameItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/regular_margin"
        android:text="@string/lastnamecontact_default"
        app:layout_constraintStart_toEndOf="@id/ivContactItem"
        app:layout_constraintTop_toBottomOf="@id/tvFirstNameItem" />

    <TextView
        android:id="@+id/tvNumberItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/regular_margin"
        android:text="@string/numbercontact_default"
        app:layout_constraintStart_toEndOf="@id/ivContactItem"
        app:layout_constraintTop_toBottomOf="@id/tvLastNameItem" />

</androidx.constraintlayout.widget.ConstraintLayout>